--- a/src/package.json
+++ b/src/package.json
@@ -8,17 +8,11 @@
     "email": ""
   },
   "dependencies": {
-    "express": "^4.13.3",
-    "grunt-browserify": "^4.0.1",
+    "express": "^4.13.4",
     "stream-split": "^0.2.0",
     "sylvester.js": "^0.1.1",
     "uclass": "^2.0.7",
-    "ws": "^0.8.0"
+    "ws": "^0.8.1"
   },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^3.8.0",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1"
-  }
+  "devDependencies": {}
 }
